--- a/package.json
+++ b/package.json
@@ -6,18 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
-  "dependencies": {
-  },
-  "devDependencies": {
-    "react": "16.6.1",
-    "react-native": "0.57.5",
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.49.2",
-    "react-test-renderer": "16.6.1"
-  },
-  "jest": {
-    "preset": "react-native"
+  "peerDependencies": {
+    "react-native": "0.61.4",
   },
   "description": "Zxing Android Module for React Native",
   "main": "rnzxing.js",
